--- a/resources/systemd/chef-client.service
+++ b/resources/systemd/chef-client.service
@@ -3,6 +3,7 @@ Description=Chef Client
 
 [Service]
 ExecStart=/usr/lib/redborder/bin/rb_chef-client_start.sh
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
